Fix z-index and style

--- a/Website/main.css
+++ b/Website/main.css
@@ -35,18 +35,18 @@ h1 {
 }
 
 .button {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 	text-decoration: none;
-    padding: 8px 16px;
+	padding: 8px 16px;
 	margin: 0 8px;
 	border-radius: 5px;
 	font-size: 20px;
 	color: #212529;
-    border: 1px solid #212529;
-    transition: 
+	border: 1px solid #212529;
+	transition: 
 		color 100ms ease,
 		background-color 100ms ease,
 		border-color 100ms ease;
@@ -54,15 +54,15 @@ h1 {
 
 .button:hover {
 	color: #fff;
-    background-color: #212529;
-    border-color: #212529;
+	background-color: #212529;
+	border-color: #212529;
 }
 
 .download {
 	position: relative;
 	color: #fff;
-    background-color: #212529;
-    border-color: #212529;
+	background-color: #212529;
+	border-color: #212529;
 	padding: 0;
 }
 
@@ -75,18 +75,19 @@ h1 {
 
 .downloadInfo {
 	position: absolute;
-    color: #212529;
-    font-size: 14px;
-    white-space: nowrap;
-    text-align: left;
-    top: 100%;
-    margin-top: 10px;
+	color: #212529;
+	font-size: 14px;
+	white-space: nowrap;
+	text-align: left;
+	top: 100%;
+	margin-top: 10px;
 	left: 0;
 	border: 1px solid #212529;
 	border-radius: 5px;
 	padding: 8px;
 	background-color: #ffffff;
 	pointer-events: none;
+	z-index: 1;
 	opacity: 0;
 	transition: opacity 100ms ease;
 }
@@ -108,7 +109,7 @@ h1 {
 .downloadInfoArrow {
 	position: absolute;
 	top: 100%;
-    margin-top: 3px;
+	margin-top: 3px;
 	left: 50%;
 	margin-left: -7px;
 	pointer-events: none;
@@ -163,10 +164,10 @@ h2 {
 }
 
 ul {
-    display: table;
-    white-space: nowrap;
-    margin: 0 auto;
-    text-align: left;
+	display: table;
+	white-space: nowrap;
+	margin: 0 auto;
+	text-align: left;
 }
 
 .footer {
@@ -207,10 +208,10 @@ ul {
 
 .language:before {
 	content: '';
-    position: absolute;
-    width: 100%;
-    height: 17px;
-    top: -11px;
+	position: absolute;
+	width: 100%;
+	height: 17px;
+	top: -11px;
 }
 
 .flag {
@@ -229,11 +230,11 @@ ul {
 .languages {
 	position: absolute;
 	bottom: 100%;
-    margin-bottom: 10px;
-    right: 0;
+	margin-bottom: 10px;
+	right: 0;
 	border-radius: 5px;
 	color: #212529;
-    border: 1px solid #212529;
+	border: 1px solid #212529;
 	background-color: #ffffff;
 	pointer-events: none;
 	opacity: 0;
@@ -249,8 +250,8 @@ ul {
 	content: '';
 	display: block;
 	position: absolute;
-    left: 50%;
-    margin-left: -7px;
+	left: 50%;
+	margin-left: -7px;
 	top: 100%;
 	margin-top: 1px;
 	width: 0;
@@ -283,19 +284,19 @@ ul {
 
 .languageLink:last-child:before {
 	content: '';
-    position: absolute;
-    display: block;
-    left: 50%;
-    margin-left: -8px;
-    top: 100%;
-    margin-top: -1px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 8px 8px 0 8px;
-    border-color: #212529 transparent transparent transparent;
+	position: absolute;
+	display: block;
+	left: 50%;
+	margin-left: -8px;
+	top: 100%;
+	margin-top: -1px;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 8px 8px 0 8px;
+	border-color: #212529 transparent transparent transparent;
 	opacity: 0;
-    z-index: 1;
+	z-index: 1;
 	transition: opacity 100ms ease;
 }
 
